gitops/infrastructure/configs/lab/flux-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-web
spec:
  ingressClassName: traefik
  rules:
    - host: flux.homelab.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flux-operator
                port:
                  name: http-web
